--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
-
+body{background-color:#e5f1e1;margin-left: 80px; margin-right:80px}
+h1 { color:#0047AB;
+  font-family: Helvetica; 
+  font-size: 60px; 
+  margin-bottom: 30px;
+  margin-left:600px}
+p{color:#0047AB; font-family:Arial;font-size:20px}
+.globe{width:15%; height:auto; outline-style: inset; color:#FF91A4; outline-width: thick}
+article{ background-color: aliceblue;outline-style: dashed; color: darkseagreen;outline-width:3px;}
+h2{color: #0047AB;font-family: Helvetica;}
+p.new_font{}
