--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,8 @@ body{background-color:#e5f1e1;margin-left: 80px; margin-right:80px}
 h1 { color:#0047AB;
   font-family: Helvetica; 
   font-size: 60px; 
-  margin-bottom: 30px;
-  margin-left:600px}
-p{color:#332E0A; font-family:Arial;font-size:20px;margin-left:600px}
+  text-align: center}
+p{color:#332E0A; font-family:Helvetica;font-size:20px;text-align:center}
 img {outline-style: inset; color:#FF91A4; outline-width: thick}
 article{ background-color:#DCE8F4; outline-style: dashed; color: #;outline-width:3px;}
 h2{color: #0047AB;font-family: Helvetica;}
