--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
-body{background-color:#e5f1e1;margin-left: 80px; margin-right:80px}
-h1 { color:#0047AB;
+body{background-color:#f5f5b8;margin-left: 80px; margin-right:80px}
+h1 { color:#328e13;
   font-family: Helvetica; 
   font-size: 60px; 
   text-align: center}
-p{color:#332E0A; font-family:Helvetica;font-size:20px;text-align:center}
+p{color:#383406; font-family:Helvetica;font-size:20px;text-align:center}
 img {outline-style: inset; color:#FF91A4; outline-width: thick}
-article{ background-color:#DCE8F4; outline-style: dashed; color: #;outline-width:3px;}
-h2{color: #0047AB;font-family: Helvetica;}
+article{ background-color:#f5f5b8 }
+h2{color: #96bfe6 ;font-family: Helvetica;}
