--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,20 @@
-body{background-color:#f5f5b8;margin-left: 80px; margin-right:80px}
-h1 { color:#328e13;
+body{
+  background-color:#f5f5b8;margin-left: 80px; margin-right:80px
+}
+
+h1 { 
+  color:#328e13;
   font-family: Helvetica; 
   font-size: 60px; 
   text-align: center}
-p{color:#383406; font-family:Helvetica;font-size:20px;text-align:center}
-img {outline-style: inset; color:#FF91A4; outline-width: thick}
+p{
+  color:#383406; font-family:Helvetica;font-size:20px;text-align:center
+}
+
+img{
+  outline-style: inset; color:#FF91A4; outline-width: thick
+}
+
 .image-container {
   width: 200px;
   height: 300px;
@@ -17,5 +27,10 @@ img {outline-style: inset; color:#FF91A4; outline-width: thick}
   height: 100%;
   object-fit:cover;
 }
-article{ background-color:#f5f5b8 }
-h2{color: #96bfe6 ;font-family: Helvetica;}
+article {
+  background-color:#f5f5b8 
+}
+
+h2{
+  color: #96bfe6 ;font-family: Helvetica;
+}
