commit and push

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ p{
 }
 
 img{
-  outline-style: inset; color:#96bfe6; outline-width: thick 
+  outline-style: inset; color:#98c1e7; outline-width: thick 
   
 }
 
