--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,58 @@
-body{
-  background-color:#f5f5b8;margin-left: 80px; margin-right:80px
+body {
+  background-color: #f5f5b8;
+  margin-left: 80px;
+  margin-right: 80px;
 }
 
 h1 { 
-  color:#328e13;
+  color: #328e13;
   font-family: Helvetica; 
   font-size: 60px; 
-  text-align: center}
-h3{
-  color:#d636d9; font-family:Arial ;font-size:30 px;text-align:center
+  text-align: center;
 }
 
-img{
-  outline-style: inset; color:#328e13; outline-width: thick 
-  
+h3 {
+  color: #d636d9;
+  font-family: Arial;
+  font-size: 30px; 
+  text-align: center;
 }
 
-.center {
+
+h2 {
+  color: #328e13;
+  font-family: Helvetica;
+}
+
+
+.hobby-header {
+  color: #d636d9; 
+  font-family: Helvetica;
+  font-size: 28px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.hobby p
+{ text-align: center;}
+
+.hobby-image {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+  outline-style: inset;
+  outline-color: #328e13;
+  outline-width: thick;
 }
+
+
+.hobby {
+  margin-bottom: 30px;
+  padding: 20px;
+}
+
+
 ul {
   list-style-type: none;
   margin: 0;
@@ -45,13 +76,24 @@ li a {
 li a:hover {
   background-color: #b0c999;
 }
+
 a:link {
   color: #d636d9;
-  a:active {
+}
+
+a:active {
   color: #eb9a31;
 }
 
 
-h2{
-  color: ##328e13 ;font-family: Helvetica;
+div.img-container {
+  width: 80%;
+  height: 0;
+  padding-bottom: 75%;
+}
+
+div.img-container > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
