--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,14 @@ h2 {
   font-family: Helvetica;
 }
 
+p { text-align: center}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 
 .hobby-header {
   color: #d636d9; 
