--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,31 @@ h2 {
 
 p { text-align: center}
 
+
+#main-navigation ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #e7f2dc;
+}
+
+#main-navigation li {
+  float: left;
+}
+
+#main-navigation li a {
+  display: block;
+  color: #98c1e7;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+#main-navigation li a:hover {
+  background-color: #b0c999;
+}
+
 .center {
   display: block;
   margin-left: auto;
@@ -120,7 +145,6 @@ div.img-container > img {
 #author-photo img {
   width: 400px;
   border: 5px solid #328e13;
-  border-radius: 50%; 
   outline: none; 
 }
 #fun-facts {
