--- a/styles.css
+++ b/styles.css
@@ -22,10 +22,13 @@ h3 {
 h2 {
   color: #328e13;
   font-family: Helvetica;
+  text-align: center; 
 }
 
-p { text-align: center}
 
+p { 
+  text-align: center;
+}
 
 #main-navigation ul {
   list-style-type: none;
@@ -51,32 +54,21 @@ p { text-align: center}
   background-color: #b0c999;
 }
 
+
+a:link {
+  color: #d636d9;
+}
+
+a:active {
+  color: #eb9a31;
+}
+
+
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-}
-
-.hobby-header {
-  color: #d636d9; 
-  font-family: Helvetica;
-  font-size: 28px;
-  margin-bottom: 15px;
-  text-align: center;
-}
-
-.hobby p
-{ text-align: center;}
-
-.hobby-image {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  outline-style: inset;
-  outline-color: #328e13;
-  outline-width: thick;
 }
 
 
@@ -85,37 +77,24 @@ p { text-align: center}
   padding: 20px;
 }
 
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #e7f2dc;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: #98c1e7;
+.hobby h2 {
+  color: #d636d9; 
+  font-family: Helvetica;
+  font-size: 28px;
+  margin-bottom: 15px;
   text-align: center;
-  padding: 16px;
-  text-decoration: none;
 }
 
-li a:hover {
-  background-color: #b0c999;
+
+.hobby p {
+  text-align: center;
 }
 
-a:link {
-  color: #d636d9;
-}
 
-a:active {
-  color: #eb9a31;
+.hobby img {
+  outline-style: inset;
+  outline-color: #328e13;
+  outline-width: thick;
 }
 
 
@@ -129,7 +108,9 @@ div.img-container > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}#author-photo {
+}
+
+#author-photo {
   background-color: #e7f2dc; 
   padding: 30px;
   margin: 20px 0;
@@ -138,7 +119,7 @@ div.img-container > img {
 }
 
 #author-photo h2 {
-  color:  #d636d9; 
+  color: #d636d9; 
   font-size: 32px;
 }
 
@@ -147,13 +128,14 @@ div.img-container > img {
   border: 5px solid #328e13;
   outline: none; 
 }
+
 #fun-facts {
   padding: 40px;
-  margin: 40px ;
+  margin: 40px;
 }
 
 #fun-facts h2 {
-  color:  #d636d9; 
+  color: #d636d9; 
   text-decoration: underline;
   text-align: center;
 }
