--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1 { 
-  color: #328e13;
+  color:#d636d9;
   font-family: Helvetica; 
   font-size: 60px; 
   text-align: center;
@@ -44,7 +44,7 @@ p {
 
 #main-navigation li a {
   display: block;
-  color: #98c1e7;
+  color: #d636d9;
   text-align: center;
   padding: 16px;
   text-decoration: none;
