--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1 { 
-  color:#d636d9;
+  color: #d636d9;
   font-family: Helvetica; 
   font-size: 60px; 
   text-align: center;
@@ -18,17 +18,16 @@ h3 {
   text-align: center;
 }
 
-
 h2 {
   color: #328e13;
   font-family: Helvetica;
   text-align: center; 
 }
 
-
 p { 
   text-align: center;
 }
+
 
 #main-navigation ul {
   list-style-type: none;
@@ -44,14 +43,27 @@ p {
 
 #main-navigation li a {
   display: block;
-  color: #d636d9;
+  color: #d636d9 !important;
   text-align: center;
   padding: 16px;
   text-decoration: none;
 }
 
+#main-navigation li a:link {
+  color: #d636d9;
+}
+
+#main-navigation li a:visited {
+  color: #d636d9;
+}
+
 #main-navigation li a:hover {
   background-color: #b0c999;
+  color: #d636d9;
+}
+
+#main-navigation li a:active {
+  color: #d636d9;
 }
 
 
@@ -63,7 +75,6 @@ a:active {
   color: #eb9a31;
 }
 
-
 .center {
   display: block;
   margin-left: auto;
@@ -73,35 +84,60 @@ a:active {
 
 
 .hobby {
-  margin-bottom: 30px;
-  padding: 20px;
+  margin-bottom: 40px;
+  padding: 30px 20px;
+  border-bottom: 2px solid #e7f2dc; 
 }
 
 .hobby h2 {
   color: #d636d9; 
   font-family: Helvetica;
   font-size: 28px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   text-align: center;
 }
 
-
-.hobby p {
-  text-align: center;
+.hobby figure {
+  margin: 20px auto; 
+  text-align: center; 
+  padding: 0;
 }
-
 
 .hobby img {
+  display: block; 
+  margin: 0 auto; 
+  width: 60%;
+  max-width: 500px; 
+  height: auto; 
   outline-style: inset;
   outline-color: #328e13;
   outline-width: thick;
 }
 
 
+.hobby p {
+  text-align: center; 
+  margin: 20px auto 0 auto; 
+  padding: 0 20px; /
+  max-width: 700px; 
+  line-height: 1.8; 
+  font-size: 16px;
+}
+
+
+.hobby figcaption {
+  text-align: center;
+  font-style: italic;
+  color: #666;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
 div.img-container {
   width: 80%;
   height: 0;
   padding-bottom: 75%;
+  margin: 0 auto; 
 }
 
 div.img-container > img {
@@ -109,6 +145,7 @@ div.img-container > img {
   height: 100%;
   object-fit: cover;
 }
+
 
 #author-photo {
   background-color: #e7f2dc; 
@@ -124,10 +161,15 @@ div.img-container > img {
 }
 
 #author-photo img {
+  display: block;
+  margin: 0 auto;
   width: 400px;
+  max-width: 90%;
+  height: auto;
   border: 5px solid #328e13;
   outline: none; 
 }
+
 
 #fun-facts {
   padding: 40px;
