--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@media (max-width: 768px)
 body {
   background-color: #e7f2dc;
   margin-left: 80px;
@@ -43,7 +44,7 @@ p {
 
 #main-navigation li a {
   display: block;
-  color: #d636d9 !important;
+  color: #d636d9;
   text-align: center;
   padding: 16px;
   text-decoration: none;
@@ -86,7 +87,7 @@ a:active {
 .hobby {
   margin-bottom: 40px;
   padding: 30px 20px;
-  background-color: #ffffff;
+  background-color: ##f0f5eb;
   border-radius: 10px;
   border: 2px solid #b0c999;
 }
@@ -158,7 +159,7 @@ div.img-container > img {
 
 
 #author-photo {
-  background-color: #ffffff;
+  background-color: ##f0f5eb;
   padding: 30px;
   margin: 20px 0;
   border-radius: 10px;
