--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ div.img-container > img {
 #fun-facts {
   padding: 40px;
   margin: 40px;
-  background-color: #ffffff;
+  background-color: #e7f2dc;
   border-radius: 10px;
   border: 2px solid #b0c999;
 }
