--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ a:active {
 .hobby {
   margin-bottom: 40px;
   padding: 30px 20px;
-  background-color: ##f0f5eb;
+  background-color: #f0f5eb;
   border-radius: 10px;
   border: 2px solid #b0c999;
 }
@@ -159,7 +159,7 @@ div.img-container > img {
 
 
 #author-photo {
-  background-color: ##f0f5eb;
+  background-color: #f0f5eb;
   padding: 30px;
   margin: 20px 0;
   border-radius: 10px;
